// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VueComponent slot > renders named slot content 1`] = `
<div>
  <style></style>
  <div class="">
    <style></style>
    <div class="" data-scope-scope-id="">
      <p class="" data-scope-scope-id="">foo content</p>
      <p class="">named</p>
    </div>
  </div>
</div>
`;

exports[`VueComponent slot > renders placeholder slot content 1`] = `
<div>
  <style></style>
  <div class="">
    <p class="">placeholder content</p>
  </div>
</div>
`;

exports[`VueComponent slot > renders slot content 1`] = `
<div>
  <style></style>
  <div class="">
    <style></style>
    <div class="" data-scope-scope-id="">
      <p class="" data-scope-scope-id="">foo content</p>
      <p class="">injected</p>
    </div>
  </div>
</div>
`;

exports[`VueComponent slot > resolves template element children as the named slot 1`] = `
<div>
  <style></style>
  <div class="">
    <style></style>
    <div class="" data-scope-scope-id=""><strong class="">named</strong><span class="">content</span></div>
  </div>
</div>
`;
